# work-atlas

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
docker/: entrypoint.sh
src/accounts/: apps.py  models.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_email_verification.py  test_registration.py
src/api/v1/: permissions.py  routers.py  serializers.py  views.py
src/common/: utils.py
src/companies/: apps.py  models.py
src/companies/migrations/: 0001_initial.py
src/companies/tests/: test_company_view.py
src/config/: tenants.py  urls.py
src/config/settings/: base.py  local.py  prod.py  test.py
src/openapi/: schema.yml
src/profiles/: apps.py  models.py
src/profiles/migrations/: 0001_initial.py
src/profiles/tests/: test_csv_import.py  test_filters.py  test_geosearch.py  test_precision.py  test_profile.py
src/tenancy/: __init__.py  admin.py  apps.py  models.py  routers.py  selectors.py  services.py
src/tenancy/management/commands/: create_tenant.py
src/tenancy/tests/: test_tenant.py
